# nova_sync

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  License.txt  Readme.md
.github/workflows/: ci.yml
include/nova/sync/: auto_reset_event.hpp  fair_mutex.hpp  fast_mutex.hpp  manual_reset_event.hpp  native_auto_reset_event.hpp  native_manual_reset_event.hpp  recursive_spinlock_mutex.hpp  shared_spinlock_mutex.hpp  spinlock_mutex.hpp  timed_auto_reset_event.hpp  timed_manual_reset_event.hpp
include/nova/sync/detail/: async_support.hpp  backoff.hpp  compat.hpp  native_handle_support.hpp  pause.hpp  syscall.hpp  timed_wait.hpp
include/nova/sync/event/: auto_reset_event.hpp  concepts.hpp  manual_reset_event.hpp  native_auto_reset_event.hpp  native_manual_reset_event.hpp  parking_auto_reset_event.hpp  parking_manual_reset_event.hpp  timed_auto_reset_event.hpp  timed_manual_reset_event.hpp
include/nova/sync/event/detail/: async_support.hpp
include/nova/sync/event/support/: boost_asio_support.hpp  libdispatch_support.hpp  qt_support.hpp
include/nova/sync/futex/: atomic_wait.hpp
include/nova/sync/mutex/: annotations.hpp  apple_os_unfair_mutex.hpp  async_concepts.hpp  boost_asio_support.hpp  concepts.hpp  eventfd_mutex.hpp  fair_mutex.hpp  fast_mutex.hpp  kqueue_mutex.hpp  libdispatch_support.hpp  native_async_mutex.hpp  parking_mutex.hpp  policies.hpp  pthread_mutex.hpp  pthread_rt_mutex.hpp  pthread_rwlock_mutex.hpp  pthread_spinlock_mutex.hpp  qt_support.hpp  recursive_spinlock_mutex.hpp  shared_spinlock_mutex.hpp  spinlock_mutex.hpp  ticket_mutex.hpp  tsa_annotations.hpp  tsa_macros.hpp  win32_critical_section_mutex.hpp  win32_event_mutex.hpp  win32_mutex.hpp  win32_recursive_mutex.hpp  win32_srw_mutex.hpp
include/nova/sync/mutex/detail/: async_support.hpp
include/nova/sync/mutex/support/: async_waiter_guard.hpp  boost_asio_support.hpp  libdispatch_support.hpp  qt_support.hpp
include/nova/sync/semaphore/: concepts.hpp  dispatch_semaphore.hpp  eventfd_semaphore.hpp  fast_semaphore.hpp  kqueue_semaphore.hpp  mach_semaphore.hpp  native_async_semaphore.hpp  parking_semaphore.hpp  posix_semaphore.hpp  timed_counting_semaphore.hpp  win32_semaphore.hpp
include/nova/sync/semaphore/detail/: async_support.hpp
include/nova/sync/semaphore/support/: boost_asio_support.hpp  libdispatch_support.hpp  qt_support.hpp
include/nova/sync/thread_safety/: annotations.hpp  locked_object.hpp
source/nova/sync/: fair_mutex.cpp  fast_mutex.cpp  native_auto_reset_event.cpp  native_manual_reset_event.cpp  recursive_spinlock_mutex.cpp  shared_spinlock_mutex.cpp  spinlock_mutex.cpp
source/nova/sync/detail/: syscall.cpp  timed_wait.cpp
source/nova/sync/event/: native_auto_reset_event.cpp  native_manual_reset_event.cpp  timed_auto_reset_event.cpp  timed_manual_reset_event.cpp
source/nova/sync/futex/: atomic_wait.cpp
source/nova/sync/mutex/: eventfd_mutex.cpp  fair_mutex.cpp  fast_mutex.cpp  kqueue_mutex.cpp  parking_mutex.cpp  recursive_spinlock_mutex.cpp  shared_spinlock_mutex.cpp  spinlock_mutex.cpp  ticket_mutex.cpp  unfair_lock_mutex.cpp  win32_critical_section_mutex.cpp  win32_event_mutex.cpp  win32_mutex.cpp  win32_recursive_mutex.cpp  win32_srw_mutex.cpp
source/nova/sync/semaphore/: dispatch_semaphore.cpp  eventfd_semaphore.cpp  kqueue_semaphore.cpp  mach_semaphore.cpp  posix_semaphore.cpp  win32_semaphore.cpp
test/: event_async_asio_test.cpp  event_async_libdispatch_test.mm  event_async_qt_test.cpp  event_benchmarks.cpp  event_test.cpp  event_types.hpp  futex_test.cpp  locked_object_test.cpp  mutex_async_asio_test.cpp  mutex_async_libdispatch_test.mm  mutex_async_qt_test.cpp  mutex_async_test.cpp  mutex_benchmarks.cpp  mutex_test.cpp  mutex_thread_safety_test.cpp  mutex_types.hpp  policy_mutex_test.cpp  semaphore_async_asio_test.cpp  semaphore_async_libdispatch_test.mm  semaphore_async_qt_test.cpp  semaphore_benchmarks.cpp  semaphore_test.cpp  semaphore_types.hpp
test/negative/: acquired_after_wrong_order.cpp  double_lock_non_reentrant.cpp  excludes_while_holding.cpp  guarded_by_without_lock.cpp  pt_guarded_by_without_lock.cpp  release_without_lock.cpp  requires_without_lock.cpp  shared_lock_write_guarded.cpp
tools/: README.md  bench_plot.py
